tests/reference/asr-bindc_04-06bd800.stderr
semantic error: Only those local variables that can be reduced to compile-time constants should be used in dimensions of an array.
  --> tests/errors/bindc_04.py:20:12
   |
20 |     C: i16[nk] = empty(nk, dtype=int16)
   |            ^^ 


Note: Please report unclear or confusing messages as bugs at
https://github.com/lcompilers/lpython/issues.
